--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ kotlin = "2.0.20"
 kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.7.3"
 ksp = "2.0.20-1.0.25"
+ktor-utils = "3.0.0"
 okhttp3 = "5.0.0-alpha.14"
 okio = "3.9.1"
 rikkax-material = { strictly = "1.6.6" }
@@ -50,6 +51,7 @@ drawer = { module = "com.drakeet.drawer:drawer", version.ref = "drawer" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-cbor = { module = "org.jetbrains.kotlinx:kotlinx-serialization-cbor", version.ref = "kotlinx-serialization" }
+ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor-utils" }
 material = { module = "com.google.android.material:material", version.ref = "google-android-material" }
 
 okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttp3" }
