--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-project(ehviewer C ASM)
+project(ehviewer C)
 include(FetchContent)
 
 if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
@@ -16,28 +16,27 @@ if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
            -mllvm -polly-invariant-load-hoisting")
 endif (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
 
-# Change the default path of fetch content to avoid downloading the same dependencies per architecture
-get_filename_component(deps "../_deps" REALPATH BASE_DIR "${CMAKE_BINARY_DIR}")
-set(FETCHCONTENT_BASE_DIR ${deps})
+option(BUILD_TESTING OFF)
 
-set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
-set(BUILD_TESTING 0)
-
-FetchContent_Declare(liblzma
-        GIT_REPOSITORY https://git.tukaani.org/xz.git
-        GIT_TAG v5.6.2
-        PATCH_COMMAND git apply ${CMAKE_CURRENT_LIST_DIR}/0001-Don-t-build-other-binarys.patch || cd .
-        )
+set(XZ_PATCH ${CMAKE_CURRENT_LIST_DIR}/0001-Don-t-build-other-binaries.patch)
+FetchContent_Declare(
+        liblzma
+        GIT_REPOSITORY https://github.com/tukaani-project/xz.git
+        GIT_TAG v5.6.3
+        GIT_SHALLOW 1
+        PATCH_COMMAND git apply --check -R ${XZ_PATCH} || git apply ${XZ_PATCH}
+)
 
 FetchContent_MakeAvailable(liblzma)
 include_directories(${liblzma_SOURCE_DIR}/src/liblzma/api)
 
 # Build GNUTLS libnettle
-FetchContent_Declare(nettle
+FetchContent_Declare(
+        nettle
         URL https://ftp.gnu.org/gnu/nettle/nettle-3.9.1.tar.gz
         URL_MD5 29fcd2dec6bf5b48e5e3ffb3cbc4779e
         SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/nettle/nettle
-        )
+)
 
 FetchContent_MakeAvailable(nettle)
 add_subdirectory(nettle)
@@ -60,6 +59,7 @@ SET(HAVE_LZMA_STREAM_ENCODER_MT 1)
 SET(HAVE_LZMADEC_H 1)
 SET(HAVE_LIBLZMADEC 1)
 
+option(ENABLE_OPENSSL OFF)
 option(ENABLE_TAR OFF)
 option(ENABLE_CPIO OFF)
 option(ENABLE_CAT OFF)
@@ -69,15 +69,18 @@ option(ENABLE_TEST OFF)
 # Configure libarchive link's static lib
 SET(LIBARCHIVE_CUSTOM_LIBS "nettle" "liblzma")
 
-FetchContent_Declare(libarchive
-        GIT_REPOSITORY https://github.com/libarchive/libarchive
-        GIT_TAG v3.7.4
-        PATCH_COMMAND git apply ${CMAKE_CURRENT_LIST_DIR}/0001-Hide-symbols.patch ${CMAKE_CURRENT_LIST_DIR}/0002-Insert-link-libs.patch || cd .
-        )
+set(LIBARCHIVE_PATCH ${CMAKE_CURRENT_LIST_DIR}/0001-Insert-link-libs.patch)
+FetchContent_Declare(
+        libarchive
+        GIT_REPOSITORY https://github.com/libarchive/libarchive.git
+        GIT_TAG v3.7.7
+        GIT_SHALLOW 1
+        PATCH_COMMAND git apply --check -R ${LIBARCHIVE_PATCH} || git apply ${LIBARCHIVE_PATCH}
+)
 
 FetchContent_MakeAvailable(libarchive)
 include_directories(${libarchive_SOURCE_DIR}/libarchive)
 
 # Build and link our app's native lib
-add_library(${PROJECT_NAME} SHARED archive.c image.c gifutils.c natsort/strnatcmp.c)
-target_link_libraries(${PROJECT_NAME} archive_static log jnigraphics GLESv2)
+add_library(${PROJECT_NAME} SHARED archive.c image.c gifutils.c hash.c natsort/strnatcmp.c)
+target_link_libraries(${PROJECT_NAME} archive_static log jnigraphics GLESv2 -Wl,--exclude-libs,ALL)
