--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.7.3"
+agp = "8.10.0"
 androidx-activity = "1.10.1"
 androidx-appcompat = "1.7.0"
 androidx-biometric = "1.4.0-alpha02"
@@ -12,22 +12,22 @@ androidx-lifecycle = "2.8.7"
 androidx-paging = "3.3.6"
 androidx-preference = "1.2.1"
 androidx-recyclerview = "1.4.0"
-androidx-room = "2.7.0"
+androidx-room = "2.7.1"
 androidx-swiperefreshlayout = "1.2.0-beta01"
 coil = "3.1.0"
 drawer = "1.0.3"
 google-android-material = "1.12.0"
-jsoup = "1.19.1"
-kotlin = "2.0.20"
+jsoup = "1.20.1"
+kotlin = "2.1.20"
 kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.6.2"
 kotlinx-serialization = "1.8.1"
-ksp = "2.0.20-1.0.25"
-ktor-utils = "3.1.2"
+ksp = "2.1.20-2.0.1"
+ktor-utils = "3.1.3"
 okhttp3 = "5.0.0-alpha.14"
 okio = "3.11.0"
 rikkax-material = { strictly = "1.6.6" }
-spotless = "6.25.0"
+spotless = "7.0.3"
 
 [libraries]
 androidx-activity = { module = "androidx.activity:activity-ktx", version.ref = "androidx-activity" }
@@ -56,7 +56,7 @@ jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 kotlinx-serialization-cbor = { module = "org.jetbrains.kotlinx:kotlinx-serialization-cbor", version.ref = "kotlinx-serialization" }
-ktlint = "com.pinterest:ktlint:1.4.0"
+ktlint = "com.pinterest.ktlint:ktlint-cli:1.5.0"
 ktor-utils = { module = "io.ktor:ktor-utils", version.ref = "ktor-utils" }
 material = { module = "com.google.android.material:material", version.ref = "google-android-material" }
 
